--- a/config/config.properties
+++ b/config/config.properties
@@ -1,6 +1,6 @@
 sName = dbServer
 sPassword = dbPassword
-dbName = databaseName
+dbName = OnLineStore
 drName = com.mysql.cj.jdbc.Driver
 url = jdbc:mysql://localhost:3306/
 url2 = jdbcURL2
