Fix database connection on the window side.

--- a/config/config.properties
+++ b/config/config.properties
@@ -4,3 +4,10 @@
 #drName = com.mysql.cj.jdbc.Driver
 #url = jdbc:mysql://localhost:3306/
 #url2 = jdbcURL2
+
+sName = Keita
+sPassword = !2Mohamed
+dbName = OnLineStore
+drName = com.mysql.cj.jdbc.Driver
+url = jdbc:mysql://localhost:3306/
+url2 = jdbcURL2
