Change switchStage method parameter from boolean to String. And Revise the code a little more

--- a/config/FxmlFileLocation.properties
+++ b/config/FxmlFileLocation.properties
@@ -1,4 +1,4 @@
 Main = /fxml/MainIndex.fxml
 Login = /fxml/LoginIndex.fxml
-Admin = /fxml/AdminIndex.fxml
+Employee = /fxml/EmployeeIndex.fxml
 Checkout = /fxml/CheckoutIndex.fxml
