Separate registration GUI, move css URL

--- a/config/FxmlFileURL.properties
+++ b/config/FxmlFileURL.properties
@@ -2,3 +2,4 @@ Main = /fxml/MainIndex.fxml
 Login = /fxml/LoginIndex.fxml
 Employee = /fxml/EmployeeIndex.fxml
 Checkout = /fxml/CheckoutIndex.fxml
+Register = /fxml/Register.fxml
