Fix order table in Employee class and working on account GUI

--- a/config/FxmlFileURL.properties
+++ b/config/FxmlFileURL.properties
@@ -3,3 +3,4 @@ Login = /fxml/LoginIndex.fxml
 Employee = /fxml/EmployeeIndex.fxml
 Checkout = /fxml/CheckoutIndex.fxml
 Register = /fxml/Register.fxml
+Account = /fxml/Account.fxml
