--- a/config/StylesheetURL.properties
+++ b/config/StylesheetURL.properties
@@ -3,3 +3,4 @@ Login = /style/Login.css
 Employee = /style/Employee.css
 Checkout = /style/Checkout.css
 Register = /style/Register.css
+Account = /style/Account.css
